src/OpenCvSharpExtern/tracking.h

CVAPI(ExceptionStatus) tracking_legacy_Tracker_init(
    cv::legacy::Tracker* tracker, const cv::Mat* image, const interop::Rect2d boundingBox, int* returnValue)
{
    return cvTry([&] {
        const bool ret = tracker->init(*image, cpp(boundingBox));
        *returnValue = ret ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Tracker_update(
    cv::legacy::Tracker* tracker, const cv::Mat* image, interop::Rect2d* boundingBox, int* returnValue)
{
    return cvTry([&] {
        cv::Rect2d bb = cpp(*boundingBox);
        const bool ret = tracker->update(*image, bb);
        if (ret)
        {
            *boundingBox = c(bb);
        }
        *returnValue = ret ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_TrackerMIL_create1(cv::Ptr<cv::legacy::TrackerMIL>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::legacy::TrackerMIL::create();
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_TrackerMIL_create2(
    tracker_legacy_TrackerMIL_Params* parameters, cv::Ptr<cv::legacy::TrackerMIL>** returnValue)
{
    return cvTry([&] {
        cv::legacy::TrackerMIL::Params p;
        p.samplerInitInRadius = parameters->samplerInitInRadius;
        p.samplerInitMaxNegNum = parameters->samplerInitMaxNegNum;
        p.samplerSearchWinSize = parameters->samplerSearchWinSize;
        p.samplerTrackInRadius = parameters->samplerTrackInRadius;
        p.samplerTrackMaxPosNum = parameters->samplerTrackMaxPosNum;
        p.samplerTrackMaxNegNum = parameters->samplerTrackMaxNegNum;
        p.featureSetNumFeatures = parameters->featureSetNumFeatures;
        const auto obj = cv::legacy::TrackerMIL::create(p);
        *returnValue = clone(obj);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerMIL_delete(cv::Ptr<cv::legacy::TrackerMIL>* ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerMIL_get(cv::Ptr<cv::legacy::TrackerMIL>* ptr, cv::legacy::TrackerMIL** returnValue)
{
    return cvTry([&] {
        *returnValue = ptr->get();
    });
}
CVAPI(ExceptionStatus) tracking_legacy_TrackerBoosting_create1(cv::Ptr<cv::legacy::TrackerBoosting>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::legacy::TrackerBoosting::create();
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_TrackerBoosting_create2(
    tracker_legacy_TrackerBoosting_Params* parameters, cv::Ptr<cv::legacy::TrackerBoosting>** returnValue)
{
    return cvTry([&] {
        cv::legacy::TrackerBoosting::Params p;
        p.numClassifiers = parameters->numClassifiers;
        p.samplerOverlap = parameters->samplerOverlap;
        p.samplerSearchFactor = parameters->samplerSearchFactor;
        p.iterationInit = parameters->iterationInit;
        p.featureSetNumFeatures = parameters->featureSetNumFeatures;
        const auto obj = cv::legacy::TrackerBoosting::create(p);
        *returnValue = clone(obj);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerBoosting_delete(cv::Ptr<cv::legacy::TrackerBoosting>* ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerBoosting_get(cv::Ptr<cv::legacy::TrackerBoosting>* ptr, cv::legacy::TrackerBoosting** returnValue)
{
    return cvTry([&] {
        *returnValue = ptr->get();
    });
}
CVAPI(ExceptionStatus) tracking_legacy_TrackerMedianFlow_create1(cv::Ptr<cv::legacy::TrackerMedianFlow>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::legacy::TrackerMedianFlow::create();
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_TrackerMedianFlow_create2(
    tracker_legacy_TrackerMedianFlow_Params* parameters, cv::Ptr<cv::legacy::TrackerMedianFlow>** returnValue)
{
    return cvTry([&] {
        cv::legacy::TrackerMedianFlow::Params p;
        p.pointsInGrid = parameters->pointsInGrid;
        p.winSize = cpp(parameters->winSize);
        p.maxLevel = parameters->maxLevel;
        p.termCriteria = cpp(parameters->termCriteria);
        p.winSizeNCC = cpp(parameters->winSizeNCC);
        p.maxMedianLengthOfDisplacementDifference = parameters->maxMedianLengthOfDisplacementDifference;
        const auto obj = cv::legacy::TrackerMedianFlow::create(p);
        *returnValue = clone(obj);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerMedianFlow_delete(cv::Ptr<cv::legacy::TrackerMedianFlow>* ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerMedianFlow_get(cv::Ptr<cv::legacy::TrackerMedianFlow>* ptr, cv::legacy::TrackerMedianFlow** returnValue)
{
    return cvTry([&] {
        *returnValue = ptr->get();
    });
}
// legacy::TrackerTLD::Params carries no data members (default constructor only), so there is no
// parameterized create overload to bind - just the default factory.
CVAPI(ExceptionStatus) tracking_legacy_TrackerTLD_create1(cv::Ptr<cv::legacy::TrackerTLD>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::legacy::TrackerTLD::create();
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerTLD_delete(cv::Ptr<cv::legacy::TrackerTLD>* ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerTLD_get(cv::Ptr<cv::legacy::TrackerTLD>* ptr, cv::legacy::TrackerTLD** returnValue)
{
    return cvTry([&] {
        *returnValue = ptr->get();
    });
}
CVAPI(ExceptionStatus) tracking_legacy_TrackerKCF_create1(cv::Ptr<cv::legacy::TrackerKCF>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::legacy::TrackerKCF::create();
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_TrackerKCF_create2(
    tracker_legacy_TrackerKCF_Params* parameters, cv::Ptr<cv::legacy::TrackerKCF>** returnValue)
{
    return cvTry([&] {
        cv::legacy::TrackerKCF::Params p;
        p.detect_thresh = parameters->detect_thresh;
        p.sigma = parameters->sigma;
        p.lambda = parameters->lambda;
        p.interp_factor = parameters->interp_factor;
        p.output_sigma_factor = parameters->output_sigma_factor;
        p.pca_learning_rate = parameters->pca_learning_rate;
        p.resize = parameters->resize != 0;
        p.split_coeff = parameters->split_coeff != 0;
        p.wrap_kernel = parameters->wrap_kernel != 0;
        p.compress_feature = parameters->compress_feature != 0;
        p.max_patch_size = parameters->max_patch_size;
        p.compressed_size = parameters->compressed_size;
        p.desc_pca = parameters->desc_pca;
        p.desc_npca = parameters->desc_npca;
        const auto obj = cv::legacy::TrackerKCF::create(p);
        *returnValue = clone(obj);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerKCF_delete(cv::Ptr<cv::legacy::TrackerKCF>* ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerKCF_get(cv::Ptr<cv::legacy::TrackerKCF>* ptr, cv::legacy::TrackerKCF** returnValue)
{
    return cvTry([&] {
        *returnValue = ptr->get();
    });
}
// legacy::TrackerMOSSE::create() takes no arguments (no Params struct exists for this tracker).
CVAPI(ExceptionStatus) tracking_legacy_TrackerMOSSE_create1(cv::Ptr<cv::legacy::TrackerMOSSE>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::legacy::TrackerMOSSE::create();
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerMOSSE_delete(cv::Ptr<cv::legacy::TrackerMOSSE>* ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerMOSSE_get(cv::Ptr<cv::legacy::TrackerMOSSE>* ptr, cv::legacy::TrackerMOSSE** returnValue)
{
    return cvTry([&] {
        *returnValue = ptr->get();
    });
}
CVAPI(ExceptionStatus) tracking_legacy_TrackerCSRT_create1(cv::Ptr<cv::legacy::TrackerCSRT>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::legacy::TrackerCSRT::create();
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_TrackerCSRT_create2(
    tracker_legacy_TrackerCSRT_Params* parameters, cv::Ptr<cv::legacy::TrackerCSRT>** returnValue)
{
    return cvTry([&] {
        const auto p = tracking_legacy_TrackerCSRT_Param_ToCpp(parameters);
        const auto obj = cv::legacy::TrackerCSRT::create(p);
        *returnValue = clone(obj);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerCSRT_delete(cv::Ptr<cv::legacy::TrackerCSRT>* ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_TrackerCSRT_get(cv::Ptr<cv::legacy::TrackerCSRT>* ptr, cv::legacy::TrackerCSRT** returnValue)
{
    return cvTry([&] {
        *returnValue = ptr->get();
    });
}
CVAPI(ExceptionStatus) tracking_legacy_TrackerCSRT_setInitialMask(cv::legacy::TrackerCSRT* tracker, const interop::InputArrayProxy* mask)
{
    return cvTry([&] {
        tracker->setInitialMask(InProxy(*mask));
    });
}
CVAPI(ExceptionStatus) tracking_legacy_upgradeTrackingAPI(cv::Ptr<cv::legacy::Tracker>* legacyTracker, cv::Ptr<cv::Tracker>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::legacy::upgradeTrackingAPI(*legacyTracker);
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_UpgradedTracker_delete(cv::Ptr<cv::Tracker>* ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_UpgradedTracker_get(cv::Ptr<cv::Tracker>* ptr, cv::Tracker** returnValue)
{
    return cvTry([&] {
        *returnValue = ptr->get();
    });
}
CVAPI(ExceptionStatus) tracking_legacy_MultiTracker_create(cv::Ptr<cv::legacy::MultiTracker>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::legacy::MultiTracker::create();
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_MultiTracker_delete(cv::Ptr<cv::legacy::MultiTracker>* ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_Ptr_MultiTracker_get(cv::Ptr<cv::legacy::MultiTracker>* ptr, cv::legacy::MultiTracker** returnValue)
{
    return cvTry([&] {
        *returnValue = ptr->get();
    });
}
// newTracker is a cv::Ptr<cv::legacy::TrackerXXX>* (a concrete legacy tracker subclass) reinterpreted
// as cv::Ptr<cv::legacy::Tracker>*: safe because every concrete legacy tracker singly (non-virtually)
// inherits cv::legacy::Tracker as its sole direct base, so the two cv::Ptr<> instantiations share the
// same {object pointer, ref-count block} layout and only differ in static element type.
CVAPI(ExceptionStatus) tracking_legacy_MultiTracker_add(
    cv::legacy::MultiTracker* obj, cv::Ptr<cv::legacy::Tracker>* newTracker,
    const cv::Mat* image, const interop::Rect2d boundingBox, int* returnValue)
{
    return cvTry([&] {
        const bool ret = obj->add(*newTracker, *image, cpp(boundingBox));
        *returnValue = ret ? 1 : 0;
    });
}

CVAPI(ExceptionStatus) tracking_legacy_MultiTracker_update(cv::legacy::MultiTracker* obj, const cv::Mat* image, int* returnValue)
{
    return cvTry([&] {
        const bool ret = obj->update(*image);
        *returnValue = ret ? 1 : 0;
    });
}

CVAPI(ExceptionStatus) tracking_legacy_MultiTracker_getObjects(cv::legacy::MultiTracker* obj, std::vector<cv::Rect2d>* returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getObjects();
    });
}

#pragma endregion
CVAPI(ExceptionStatus) tracking_legacy_MultiTracker_Alt_new(cv::legacy::MultiTracker_Alt** returnValue)
{
    return cvTry([&] {
        *returnValue = new cv::legacy::MultiTracker_Alt();
    });
}
CVAPI(ExceptionStatus) tracking_legacy_MultiTracker_Alt_delete(cv::legacy::MultiTracker_Alt* obj)
{
    return cvTry([&] {
        delete obj;
    });
}
// See the comment on tracking_legacy_MultiTracker_add for why reinterpreting the concrete tracker's
// cv::Ptr<cv::legacy::TrackerXXX>* as cv::Ptr<cv::legacy::Tracker>* is safe here.
CVAPI(ExceptionStatus) tracking_legacy_MultiTracker_Alt_addTarget(
    cv::legacy::MultiTracker_Alt* obj, const cv::Mat* image, const interop::Rect2d boundingBox,
    cv::Ptr<cv::legacy::Tracker>* trackerAlgorithm, int* returnValue)
{
    return cvTry([&] {
        const bool ret = obj->addTarget(*image, cpp(boundingBox), *trackerAlgorithm);
        *returnValue = ret ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_MultiTracker_Alt_update(cv::legacy::MultiTracker_Alt* obj, const cv::Mat* image, int* returnValue)
{
    return cvTry([&] {
        const bool ret = obj->update(*image);
        *returnValue = ret ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_MultiTracker_Alt_targetNum(cv::legacy::MultiTracker_Alt* obj, int* returnValue)
{
    return cvTry([&] {
        *returnValue = obj->targetNum;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_MultiTracker_Alt_boundingBoxes(cv::legacy::MultiTracker_Alt* obj, std::vector<cv::Rect2d>* returnValue)
{
    return cvTry([&] {
        *returnValue = obj->boundingBoxes;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_MultiTrackerTLD_new(cv::legacy::MultiTrackerTLD** returnValue)
{
    return cvTry([&] {
        *returnValue = new cv::legacy::MultiTrackerTLD();
    });
}
// A dedicated delete is required even though MultiTrackerTLD adds no data members over
// MultiTracker_Alt: deleting a derived-class object through a base-class pointer whose destructor
// isn't virtual is undefined behavior in C++, regardless of layout compatibility. Always delete
// through the object's own static type.
CVAPI(ExceptionStatus) tracking_legacy_MultiTrackerTLD_delete(cv::legacy::MultiTrackerTLD* obj)
{
    return cvTry([&] {
        delete obj;
    });
}
CVAPI(ExceptionStatus) tracking_legacy_MultiTrackerTLD_updateOpt(cv::legacy::MultiTrackerTLD* obj, const cv::Mat* image, int* returnValue)
{
    return cvTry([&] {
        const bool ret = obj->update_opt(*image);
        *returnValue = ret ? 1 : 0;
    });
}